[gd_scene load_steps=31 format=3 uid="uid://dbgmjyfb17rd6"]

[ext_resource type="Texture2D" uid="uid://dhi45b2e54g3m" path="res://Splash/llc splash character-Sheet.png" id="1_5w23t"]
[ext_resource type="Script" path="res://Splash/splash.gd" id="1_pp06g"]
[ext_resource type="PackedScene" uid="uid://tcxerrhp3v16" path="res://Scenes/start_menu.tscn" id="2_deqpa"]
[ext_resource type="Script" path="res://Splash/SplashScreenCharacter.gd" id="2_t70dk"]
[ext_resource type="Texture2D" uid="uid://b0ansnvs2cblx" path="res://Splash/gb overlay.png" id="4_cdtl8"]
[ext_resource type="Texture2D" uid="uid://2golc1vdtko1" path="res://Splash/gameboy startup-Sheet.png" id="4_wnnfl"]
[ext_resource type="FontFile" uid="uid://bf8h0oygk1qui" path="res://Splash/Corset 8 Basic.ttf" id="6_chs21"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c3nus"]
animation = &"beginning"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_854gr"]
animation = &"end"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cc46c"]
animation = &"lightning"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f6l18"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hxrn8"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5wiu3"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mjfk2"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_uq5pf"]
states/beginning/node = SubResource("AnimationNodeAnimation_c3nus")
states/beginning/position = Vector2(338, 100)
states/end/node = SubResource("AnimationNodeAnimation_854gr")
states/end/position = Vector2(709, 100)
states/lightning/node = SubResource("AnimationNodeAnimation_cc46c")
states/lightning/position = Vector2(524, 100)
transitions = ["Start", "beginning", SubResource("AnimationNodeStateMachineTransition_f6l18"), "beginning", "lightning", SubResource("AnimationNodeStateMachineTransition_hxrn8"), "lightning", "end", SubResource("AnimationNodeStateMachineTransition_5wiu3"), "end", "End", SubResource("AnimationNodeStateMachineTransition_mjfk2")]

[sub_resource type="AtlasTexture" id="AtlasTexture_0gcxr"]
atlas = ExtResource("4_wnnfl")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbbcd"]
atlas = ExtResource("4_wnnfl")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3s50"]
atlas = ExtResource("4_wnnfl")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8y2p"]
atlas = ExtResource("4_wnnfl")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_5134p"]
atlas = ExtResource("4_wnnfl")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_12gh1"]
atlas = ExtResource("4_wnnfl")
region = Rect2(2560, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7a1n"]
atlas = ExtResource("4_wnnfl")
region = Rect2(3072, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_413ej"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gcxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbbcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3s50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8y2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5134p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12gh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7a1n")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_uafo4"]
resource_name = "beginning"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character/doggy:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5w23t")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character/doggy:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("character/doggy:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_8oqdk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character/doggy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_a30d4"]
resource_name = "lightning"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character/doggy:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5w23t")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character/doggy:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("character/doggy:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [15, 16]
}

[sub_resource type="Animation" id="Animation_th7a8"]
resource_name = "end"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character/doggy:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5w23t")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character/doggy:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("character/doggy:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjqwb"]
_data = {
"RESET": SubResource("Animation_8oqdk"),
"beginning": SubResource("Animation_uafo4"),
"end": SubResource("Animation_th7a8"),
"lightning": SubResource("Animation_a30d4")
}

[sub_resource type="LabelSettings" id="LabelSettings_mwuja"]
font = ExtResource("6_chs21")
font_size = 24
font_color = Color(0.0588235, 0.219608, 0.0588235, 1)

[sub_resource type="LabelSettings" id="LabelSettings_a4m5d"]
font = ExtResource("6_chs21")
font_size = 24
font_color = Color(0.0588235, 0.219608, 0.0588235, 1)

[node name="SplashScreen" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Splash" type="Node2D" parent="." node_paths=PackedStringArray("background")]
script = ExtResource("1_pp06g")
start_scene = ExtResource("2_deqpa")
background = NodePath("../Background")
character_end = Vector2(65, -137)
character_movement_speed = 0.8

[node name="character" type="Node2D" parent="Splash"]
position = Vector2(316, 335)
script = ExtResource("2_t70dk")
lightning_animation = "lightning"
beginning_animation = "beginning"
end_animation = "end"
primary_bg_color = Color(0.607843, 0.737255, 0.0588235, 1)
secondary_bg_color = Color(0.0588235, 0.219608, 0.0588235, 1)

[node name="AnimationTree" type="AnimationTree" parent="Splash/character"]
tree_root = SubResource("AnimationNodeStateMachine_uq5pf")
anim_player = NodePath("../AnimationPlayer")
active = true

[node name="BackgroundSecondary" type="ColorRect" parent="Splash/character"]
offset_left = -96.0
offset_top = -204.0
offset_right = 112.0
offset_bottom = -54.0
metadata/_edit_use_anchors_ = true

[node name="BackgroundPrimary" type="ColorRect" parent="Splash/character"]
offset_left = -96.0
offset_top = -204.0
offset_right = 112.0
offset_bottom = -54.0
metadata/_edit_use_anchors_ = true

[node name="doggy" type="Sprite2D" parent="Splash/character"]
position = Vector2(9, -137)
scale = Vector2(0.276667, 0.276667)
texture = ExtResource("1_5w23t")
hframes = 23

[node name="Gameboy" type="AnimatedSprite2D" parent="Splash/character"]
position = Vector2(8, -54)
scale = Vector2(1.63086, 1.63086)
sprite_frames = SubResource("SpriteFrames_413ej")
frame = 6
frame_progress = 1.0

[node name="overlay" type="Sprite2D" parent="Splash/character"]
modulate = Color(1, 1, 1, 0.611765)
position = Vector2(11, -57)
scale = Vector2(1.64, 1.64)
texture = ExtResource("4_cdtl8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Splash/character"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_wjqwb")
}

[node name="Timer" type="Timer" parent="Splash/character"]
wait_time = 0.25

[node name="Temptation" type="Label" parent="Splash"]
offset_left = 229.0
offset_top = 180.0
offset_right = 361.0
offset_bottom = 215.0
text = "Temptation"
label_settings = SubResource("LabelSettings_mwuja")

[node name="Software" type="Label" parent="Splash"]
offset_left = 248.0
offset_top = 196.0
offset_right = 354.0
offset_bottom = 231.0
text = "Games"
label_settings = SubResource("LabelSettings_a4m5d")

[connection signal="character_finished" from="Splash/character" to="Splash" method="_on_character_character_finished"]
[connection signal="animation_finished" from="Splash/character/AnimationTree" to="Splash/character" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="Splash/character/Gameboy" to="Splash/character" method="_on_gameboy_animation_finished"]
[connection signal="timeout" from="Splash/character/Timer" to="Splash/character" method="_on_timer_timeout"]
